{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 21,
  "lineage": "17667476-b134-8b0a-db01-74d81f9c8d7d",
  "resources": [
    {
      "module": "module.nic_module",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "yoong-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/networkInterfaces/yoong-nic",
            "internal_domain_name_suffix": "5momi2aa4vkuxecjk3n1ywxj0b.ix.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/publicIPAddresses/yoong-public-ip",
                "subnet_id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network/subnets/yoong-subnet-1"
              }
            ],
            "location": "southeastasia",
            "name": "yoong-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "yoong-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.pubip_module.azurerm_public_ip.yoong-ip",
            "module.rg_module.azurerm_resource_group.yoong-rg",
            "module.subnet_module.azurerm_subnet.yoong-subnet-1",
            "module.vn_module.azurerm_virtual_network.yoong-vn"
          ]
        }
      ]
    },
    {
      "module": "module.pubip_module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "yoong-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/publicIPAddresses/yoong-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.144.196.21",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "yoong-public-ip",
            "resource_group_name": "yoong-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "yoong-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/networkSecurityGroups/yoong-security-group",
            "location": "southeastasia",
            "name": "yoong-security-group",
            "resource_group_name": "yoong-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "yoong-dev-rule-1",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "115.79.142.112/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "yoong-sg-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/networkSecurityGroups/yoong-security-group/securityRules/yoong-dev-rule-1",
            "name": "yoong-dev-rule-1",
            "network_security_group_name": "yoong-security-group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "yoong-resources",
            "source_address_prefix": "115.79.142.112/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg",
            "module.sg_module.azurerm_network_security_group.yoong-sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "yoong-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network/subnets/yoong-subnet-1",
            "network_security_group_id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/networkSecurityGroups/yoong-security-group",
            "subnet_id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network/subnets/yoong-subnet-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg",
            "module.sg_module.azurerm_network_security_group.yoong-sg",
            "module.subnet_module.azurerm_subnet.yoong-subnet-1",
            "module.vn_module.azurerm_virtual_network.yoong-vn"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "yoong-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network/subnets/yoong-subnet-1",
            "name": "yoong-subnet-1",
            "resource_group_name": "yoong-resources",
            "virtual_network_name": "yoong-network"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg",
            "module.vn_module.azurerm_virtual_network.yoong-vn"
          ]
        }
      ]
    },
    {
      "module": "module.vn_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "yoong-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "70c41cfb-f500-4b55-9049-575bbc5ae9d1",
            "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network",
            "location": "southeastasia",
            "name": "yoong-network",
            "resource_group_name": "yoong-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/virtualNetworks/yoong-network/subnets/yoong-subnet-1",
                "name": "yoong-subnet-1",
                "security_group": "/subscriptions/fcd473df-8b37-4378-a156-19b7221e15d4/resourceGroups/yoong-resources/providers/Microsoft.Network/networkSecurityGroups/yoong-security-group"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.rg_module.azurerm_resource_group.yoong-rg"
          ]
        }
      ]
    }
  ]
}